--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 
 <body>
     
+    <!-- navbar  -->
+    <nav class="navbar navbar-expand-lg bg-info">
+        <div class="container-fluid">
+
+          <a class="navbar-brand" href="#">
+            <img src="../d05/assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            Viajes Chile
+          </a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link" href="#">Quiénes Somos</a>
+              <a class="nav-link" href="#">Destacados</a>
+              <a class="nav-link" aria-disabled="true">Contacto</a>
+            </div>
+          </div>
+
+        </div>
+      </nav>
+
+    
+
 
     <!-- script bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
