--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
         </div>
     </section>
 
+    <section id="destacados" class="mt-5 text-center d-flex justify-content-center">
+      <div class="container">
+        <h1 class="fs-5 fw-light mt-5 mb-5">Destacados</h1>
+
+        <div class="row">
+          <div class="card col-3" >
+            <img src="../d05/assets/img/card1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card col-3">
+            <img src="../d05/assets/img/card2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card col-3">
+            <img src="../d05/assets/img/card3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card col-3">
+            <img src="../d05/assets/img/card4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+
     
     <!-- script fontawesome -->
     <script src="https://kit.fontawesome.com/fe65c065ef.js" crossorigin="anonymous"></script>
