--- a/index.html
+++ b/index.html
@@ -56,45 +56,23 @@
     </nav>
 
     <!-- carrusel -->
-    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-      <div class="carousel-inner">
+    <div id="carouselExampleFade" class="carousel slide">
+      <div class="carousel-inner ">
         <div class="carousel-item active">
-          <img
-            src="../d05/assets/img/carousel1.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="../d05/assets/img/carousel1.jpg" class="d-block w-100" alt="llamas norte de chile">
         </div>
         <div class="carousel-item">
-          <img
-            src="../d05/assets/img/carousel2.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="../d05/assets/img/carousel2.jpg" class="d-block w-100" alt="moai">
         </div>
         <div class="carousel-item">
-          <img
-            src="../d05/assets/img/carousel3.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="../d05/assets/img/carousel3.jpg" class="d-block w-100" alt="pingüino">
         </div>
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleRide"
-        data-bs-slide="prev"
-      >
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleRide"
-        data-bs-slide="next"
-      >
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
