--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <!-- navbar  -->
-    <nav class="navbar navbar-expand-lg bg-info">
+    <nav class="navbar navbar-expand-lg bg-info sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
@@ -47,9 +47,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="#">Inicio</a>
-            <a class="nav-link" href="#">Quiénes Somos</a>
-            <a class="nav-link" href="#">Destacados</a>
-            <a class="nav-link" aria-disabled="true">Contacto</a>
+            <a class="nav-link" href="#quienes_somos">Quiénes Somos</a>
+            <a class="nav-link" href="#destacados">Destacados</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
       </div>
@@ -79,8 +79,8 @@
     </div>
 
     <!-- section quienes somos -->
-    <header class="d-flex justify-content-center align-items-center text-white">
-      <h1 class="fs-5 fw-light mt-5 mb-5">¿QUIÉNES SOMOS?</h1>
+    <header id="quienes_somos" class="d-flex justify-content-center align-items-center text-white">
+      <h1 class="fs-4 fw-light mt-5 mb-5">¿QUIÉNES SOMOS?</h1>
     </header>
 
     <section
@@ -125,6 +125,7 @@
       </div>
     </section>
 
+    <!-- destacados -->
     <section
       id="destacados"
       class="mt-5 text-center d-flex justify-content-center"
@@ -191,7 +192,7 @@
 
     <!-- formulario -->
     
-      <form class="container mt-5">
+      <form id="contacto" class="container mt-5">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label"
             >Nombre</label
