modificaciones al navbar

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   <body>
     <!-- navbar  -->
-    <nav class="navbar navbar-expand-lg bg-info sticky-top">
+    <nav class="navbar navbar-expand-md bg-info sticky-top navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand mx-md-5 px-sm-5 py-0" href="#">
           <img
             src="../d05/assets/img/viajes.svg"
             alt="Logo"
@@ -33,7 +33,7 @@
         </a>
 
         <button
-          class="navbar-toggler"
+          class="navbar-toggler px-3 px-lg-5"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNavAltMarkup"
@@ -44,12 +44,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse justify-content-end pe-5" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="#">Inicio</a>
-            <a class="nav-link" href="#quienes_somos">Quiénes Somos</a>
-            <a class="nav-link" href="#destacados">Destacados</a>
-            <a class="nav-link" href="#contacto">Contacto</a>
+            <a class="nav-link  active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link  active" href="#quienes_somos">Quiénes Somos</a>
+            <a class="nav-link  active" href="#destacados">Destacados</a>
+            <a class="nav-link  active" href="#contacto">Contacto</a>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
 
     <!-- section quienes somos -->
     <header id="quienes_somos" class="d-flex justify-content-center align-items-center text-white">
-      <h1 class="fs-4 fw-light mt-5 mb-5">¿QUIÉNES SOMOS?</h1>
+      <h1 class="fs-4 fw-light mt-5 mb-5 pt-4 text-uppercase">¿quiénes somos?</h1>
     </header>
 
     <section
@@ -131,7 +131,7 @@
       class="mt-5 text-center d-flex justify-content-center"
     >
       <div class="container">
-        <h1 class="fs-5 fw-light mt-5 mb-5">Destacados</h1>
+        <h1 class="fs-5 fw-light mt-5 mb-5 pt-5 text-uppercase">Destacados</h1>
 
         <div class="row">
           <div class="card col-3">
