modificaciones en la sección destacado

--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
 
   <!-- destacados -->
   <section id="destacados" class="text-center d-flex justify-content-center">
-    <div class="container">
-      <h1 class="fs-5 fw-light text-uppercase">Destacados</h1>
+    <div class="container-fluid destacado_cont justify-content-center">
 
-      <div class="row">
-        <div class="card col-3">
+      <h1 class="fs-5 fw-light text-uppercase m-4 p-4">Destacados</h1>
+
+      <div class="row row-cols-1 row-cols-md-5 justify-content-center">
+        <div class="card h-100 bg-info ">
           <img src="../d05/assets/img/card1.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <p class="card-text">
@@ -126,7 +127,7 @@
             </p>
           </div>
         </div>
-        <div class="card col-3">
+        <div class="card  h-100 bg-info m-3">
           <img src="../d05/assets/img/card2.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <p class="card-text">
@@ -135,7 +136,7 @@
             </p>
           </div>
         </div>
-        <div class="card col-3">
+        <div class="card h-100 bg-info">
           <img src="../d05/assets/img/card3.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <p class="card-text">
@@ -144,7 +145,7 @@
             </p>
           </div>
         </div>
-        <div class="card col-3">
+        <div class="card h-100 bg-info mx-3">
           <img src="../d05/assets/img/card4.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <p class="card-text">
