sección destacados tarjetas terminadas

--- a/index.html
+++ b/index.html
@@ -157,33 +157,35 @@
     </div>
   </section> -->
 
+
+ 
   <section id="destacados" class="container-fluid text-center mt-5">
-    <h1 class="text-uppercase mt-5">destacados</h1>
+    <h1 class="text-uppercase mt-5 ">destacados</h1>
 
-    <div id="cartas" class="row justify-content-center mt-5">
+    <div id="cartas" class="row justify-content-center mt-5 px-3 px-md-0">
 
-      <div class="card col-md-4 bg-info" style="width: 18rem;">
+      <div class="card col-lg-2 bg-info mt-lg-0 col-md-5 me-md-1 me-lg-3">
         <img src="../d05/assets/img/card1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo reiciendis nemo et beatae atque impedit natus molestiae incidunt praesentium quisquam, odit autem delectus perferendis suscipit architecto a explicabo eum nisi.</p>
         </div>
       </div>
 
-      <div class="card col-md-4 mx-5 bg-info" style="width: 18rem;">
+      <div class="card col-lg-2 bg-info mt-2 mt-md-0 col-md-5 ms-md-1 me-lg-3 ms-lg-3" >
         <img src="../d05/assets/img/card2.jpg " class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur facere, magni quis deleniti cum id minus rem voluptatibus dolorem, suscipit praesentium, inventore expedita debitis nostrum nobis? Nemo ratione pariatur quos.</p>
         </div>
       </div>
 
-      <div class="card col-md-4 bg-info" style="width: 18rem;">
-        <img src="../d05/assets/img/card3.jpg" class="card-img-top" alt="...">
+      <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 me-md-1 ms-lg-3 me-lg-3">
+        <img src="../d05/assets/img/card3.jpg" class="card-img-top " alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae nihil ut aliquid accusamus consequatur molestiae aut porro, cumque minima illum veritatis fugiat harum. Veniam quas soluta error ad officiis?</p>
         </div>
       </div>
 
-      <div class="card col-md-4 mx-5 bg-info" style="width: 18rem;">
+      <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 ms-md-1 ms-lg-3">
         <img src="../d05/assets/img/card4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatibus deserunt, dolore nesciunt, iure voluptates blanditiis nostrum sint dignissimos quo officia aliquam aspernatur ab molestiae dolorum ipsum facere eligendi quisquam.</p>
