formulario de contacto funcionando

--- a/index.html
+++ b/index.html
@@ -201,21 +201,31 @@
 
   <!-- formulario -->
 
-  <form id="contacto" class="container mt-5">
-    <div class="mb-3">
+<section id="contacto" class="mt-5">
+  <h1 class="text-uppercase text-center">Contacto</h1>
+
+  <form id= "formulario" class="col-lg-9 px-3 px-md-4">
+    <div class="mb-3 ">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" />
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
     </div>
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" />
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
     </div>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
     </div>
-    <button class="btn btn-info" type="submit">Enviar</button>
-  </form>
+    <div class="">
+      <button type="submit" class="btn btn-info mb-3">Enviar</button>
+    </div>
+  </form>  
+
+</section>
+
+ 
+   
 
   <!-- footer -->
 
