--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Viajes Chile</title>
-</head>
+
+
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
 <!-- bootstrap  -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,6 +18,8 @@
 
 <!-- css  -->
 <link rel="stylesheet" href="../d05/assets/css/style.css" />
+
+</head>
 
 <body>
   <!-- navbar  -->
@@ -121,28 +128,28 @@
       <div class="card col-lg-2 bg-info mt-lg-0 col-md-5 me-md-1 me-lg-3">
         <img src="../d05/assets/img/card1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo reiciendis nemo et beatae atque impedit natus molestiae incidunt praesentium quisquam, odit autem delectus perferendis suscipit architecto a explicabo eum nisi.</p>
+          <p class="card-text fs-5 ">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo reiciendis nemo et beatae atque impedit natus molestiae incidunt praesentium quisquam, odit autem delectus perferendis suscipit architecto a explicabo eum nisi.</p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-0 col-md-5 ms-md-1 me-lg-3 ms-lg-3" >
         <img src="../d05/assets/img/card2.jpg " class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur facere, magni quis deleniti cum id minus rem voluptatibus dolorem, suscipit praesentium, inventore expedita debitis nostrum nobis? Nemo ratione pariatur quos.</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur facere, magni quis deleniti cum id minus rem voluptatibus dolorem, suscipit praesentium, inventore expedita debitis nostrum nobis? Nemo ratione pariatur quos.</p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 me-md-1 ms-lg-3 me-lg-3">
         <img src="../d05/assets/img/card3.jpg" class="card-img-top " alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae nihil ut aliquid accusamus consequatur molestiae aut porro, cumque minima illum veritatis fugiat harum. Veniam quas soluta error ad officiis?</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae nihil ut aliquid accusamus consequatur molestiae aut porro, cumque minima illum veritatis fugiat harum. Veniam quas soluta error ad officiis?</p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 ms-md-1 ms-lg-3">
         <img src="../d05/assets/img/card4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatibus deserunt, dolore nesciunt, iure voluptates blanditiis nostrum sint dignissimos quo officia aliquam aspernatur ab molestiae dolorum ipsum facere eligendi quisquam.</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatibus deserunt, dolore nesciunt, iure voluptates blanditiis nostrum sint dignissimos quo officia aliquam aspernatur ab molestiae dolorum ipsum facere eligendi quisquam.</p>
         </div>
       </div>
 
@@ -182,26 +189,25 @@
    
 
   <!-- footer -->
-
-  <footer class="bg-info text-center py-3">
+  <footer class="bg-info text-center">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-6">
-          <h4 class="text-uppercase">viajes chile</h4>
+        <div class="col-12 col-sm-6 pt-4 py-md-3">
+          <h3 class="text-uppercase  ">viajes chile</h3>
         </div>
 
         <div class="col-12 col-sm-6">
           <a href="https://github.com/" target="_blank" rel="noreferrer">
-            <i class="fa-brands fa-github-square fa-2x mx-2"></i>
+            <i class="fa-brands fa-github-square fa-2x "></i>
           </a>
           <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
-            <i class="fa-brands fa-linkedin fa-2x mx-2"></i>
+            <i class="fa-brands fa-linkedin fa-2x"></i>
           </a>
           <a href="https://twitter.com/?lang=es" target="_blank" rel="noreferrer">
-            <i class="fa-brands fa-twitter-square fa-2x mx-2"></i>
+            <i class="fa-brands fa-twitter-square fa-2x"></i>
           </a>
           <a href="https://www.facebook.com/" target="_blank" rel="noreferrer">
-            <i class="fa-brands fa-facebook-square fa-2x mx-2"></i>
+            <i class="fa-brands fa-facebook-square fa-2x"></i>
           </a>
         </div>
 
@@ -226,6 +232,9 @@
   <!-- script jquery  -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <!-- js local -->
+    <script src="../d05/assets/js/script.js"></script>
 </body>
 
 </html>
