arreglando tamaños de fuente

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- section quienes somos -->
   <header id="quienes_somos" class="d-none d-md-flex justify-content-center align-items-center text-white pt-3 ">
-    <h1 class="fs-4 fw-light mt-5 pt-4 text-uppercase">¿quiénes somos?</h1>
+    <h1 class="fs-2 mt-5 pt-4 text-uppercase">¿quiénes somos?</h1>
   </header>
 
   <section id="tres_columnas" class="d-md-flex d-none justify-content-center align-content-center text-white w-75 m-auto">
@@ -121,7 +121,7 @@
  
   <!-- destacados -->
   <section id="destacados" class="container-fluid text-center mt-5">
-    <h1 class="text-uppercase mt-5 ">destacados</h1>
+    <h1 class="text-uppercase mt-5 fs-2 ">destacados</h1>
 
     <div id="cartas" class="row justify-content-center mt-5 px-3 px-md-0">
 
@@ -163,9 +163,9 @@
   <!-- formulario -->
 
 <section id="contacto" class="mt-5">
-  <h1 class="text-uppercase text-center">Contacto</h1>
+  <h1 class="text-uppercase text-center fs-2">Contacto</h1>
 
-  <form id= "formulario" class="col-lg-9 px-3 px-md-4">
+  <form id= "formulario" class="col-lg-9 px-3 px-md-4 fs-5">
     <div class="mb-3 ">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
       <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
@@ -179,7 +179,7 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
     </div>
     <div class="">
-      <button type="submit" class="btn btn-info mb-3">Enviar</button>
+      <button type="submit" class="btn btn-info mb-3 fs-4">Enviar</button>
     </div>
   </form>  
 
