--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
   <!-- navbar  -->
   <nav class="navbar navbar-expand-md bg-info sticky-top navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand mx-md-5 px-sm-5 py-0" href="#">
-        <img src="../d05/assets/img/viajes.svg" alt="Logo" width="30" height="24"
+    <div class="container-fluid fs-4 ">
+      <a class="navbar-brand mx-md-5 px-sm-5 py-0 fs-3" href="#">
+        <img src="../d05/assets/img/viajes.svg" alt="Logo" width="30" height="30"
           class="d-inline-block align-text-top" />
         Viajes Chile
       </a>
@@ -78,9 +78,9 @@
 
   <section id="tres_columnas" class="d-md-flex d-none justify-content-center align-content-center text-white w-75 m-auto">
     <div class="row">
-      <div class="col-4  ">
+      <div class="col-4">
         <div class="bg-info d-flex justify-content-center ">
-          <i class="fa-solid fa-plane text-white"></i>
+          <i class="fa-solid fa-plane fa-2x text-white"></i>
         </div>
 
         <p class="fw-medium fs-5">
@@ -100,12 +100,12 @@
         </p>
 
         <div class="bg-info d-flex justify-content-center">
-          <i class="fa-solid fa-mountain"></i>
+          <i class="fa-solid fa-mountain fa-2x"></i>
         </div>
       </div>
       <div class="col-4 ">
         <div class="bg-info d-flex justify-content-center">
-          <i class="fa-solid fa-route"></i>
+          <i class="fa-solid fa-route fa-2x"></i>
         </div>
 
         <p class="fw-medium fs-5">
