--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
 <!-- css  -->
-<link rel="stylesheet" href="../d05/assets/css/style.css" />
+<link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-expand-md bg-info sticky-top navbar-dark">
     <div class="container-fluid fs-4 ">
       <a class="navbar-brand mx-md-5 px-sm-5 py-0 fs-3" href="#">
-        <img src="../d05/assets/img/viajes.svg" alt="Logo" width="30" height="30"
+        <img src="assets/img/viajes.svg" alt="Logo" width="30" height="30"
           class="d-inline-block align-text-top" />
         Viajes Chile
       </a>
@@ -52,13 +52,13 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../d05/assets/img/carousel1.jpg" class="d-block w-100 foto1" alt="...">
+        <img src="assets/img/carousel1.jpg" class="d-block w-100 foto1" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../d05/assets/img/carousel2.jpg" class="d-block w-100 foto2" alt="...">
+        <img src="assets/img/carousel2.jpg" class="d-block w-100 foto2" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../d05/assets/img/carousel3.jpg" class="d-block w-100 foto3" alt="...">
+        <img src="assets/img/carousel3.jpg" class="d-block w-100 foto3" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
