--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos
           porro amet excepturi cupiditate rerum nihil voluptates cum!
           Consequuntur dicta fugit reiciendis non velit porro error odit! Fuga
-          est molestias ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quasi ab consectetur quae corporis facilis accusantium vero unde! Architecto id repellendus aut! Dolores, aliquid quasi dolorum tenetur odit asperiores blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corrupti ab similique molestias molestiae aut aliquid temporibus explicabo laborum! Laboriosam, eum. Doloribus in modi quibusdam esse inventore. Excepturi, quae illo!
+          est molestias ipsum. 
         </p>
       </div>
 
@@ -96,7 +96,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos
           porro amet excepturi cupiditate rerum nihil voluptates cum!
           Consequuntur dicta fugit reiciendis non velit porro error odit! Fuga
-          est molestias ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus labore reiciendis nemo obcaecati placeat. Tenetur, impedit. Impedit nulla quisquam recusandae odit dignissimos. Culpa sunt itaque adipisci inventore iure nostrum neque. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate sequi beatae quasi ab eum culpa expedita sapiente pariatur quas quae aut, necessitatibus error enim neque! Id officia alias accusantium nostrum.
+          est molestias ipsum. 
         </p>
 
         <div class="bg-info d-flex justify-content-center">
@@ -112,7 +112,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos
           porro amet excepturi cupiditate rerum nihil voluptates cum!
           Consequuntur dicta fugit reiciendis non velit porro error odit! Fuga
-          est molestias ipsum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat minima cumque magni minus a accusantium dolorem ratione, consequuntur adipisci debitis at, ex ducimus facere saepe fugiat nam in similique voluptatem? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam sapiente dignissimos fuga corporis aliquid sed tempora officia eaque? Architecto explicabo fugit incidunt vero dolores quod ipsa laboriosam sunt recusandae vitae.
+          est molestias ipsum. 
         </p>
       </div>
     </div>
@@ -128,28 +128,28 @@
       <div class="card col-lg-2 bg-info mt-lg-0 col-md-5 me-md-1 me-lg-3">
         <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text fs-5 ">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo reiciendis nemo et beatae atque impedit natus molestiae incidunt praesentium quisquam, odit autem delectus perferendis suscipit architecto a explicabo eum nisi.</p>
+          <p class="card-text fs-5 ">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-0 col-md-5 ms-md-1 me-lg-3 ms-lg-3" >
         <img src="assets/img/card2.jpg " class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur facere, magni quis deleniti cum id minus rem voluptatibus dolorem, suscipit praesentium, inventore expedita debitis nostrum nobis? Nemo ratione pariatur quos.</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. .</p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 me-md-1 ms-lg-3 me-lg-3">
         <img src="assets/img/card3.jpg" class="card-img-top " alt="...">
         <div class="card-body">
-          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae nihil ut aliquid accusamus consequatur molestiae aut porro, cumque minima illum veritatis fugiat harum. Veniam quas soluta error ad officiis?</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
         </div>
       </div>
 
       <div class="card col-lg-2 bg-info mt-2 mt-md-3 mt-lg-0 col-md-5 ms-md-1 ms-lg-3">
         <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatibus deserunt, dolore nesciunt, iure voluptates blanditiis nostrum sint dignissimos quo officia aliquam aspernatur ab molestiae dolorum ipsum facere eligendi quisquam.</p>
+          <p class="card-text fs-5">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
         </div>
       </div>
 
