agregando contenedor row al formulario

--- a/index.html
+++ b/index.html
@@ -165,24 +165,28 @@
 
 <section id="contacto" class="mt-5">
   <h1 class="text-uppercase text-center fs-2">Contacto</h1>
+  <div class="row">
+    <form id= "formulario" class="col-lg-9 px-3 px-md-4 fs-5">
+      <div class="mb-3 ">
+        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+      </div>
+      <div class="">
+        <button type="submit" class="btn btn-info mb-3 fs-4">Enviar</button>
+      </div>
+    </form>  
 
-  <form id= "formulario" class="col-lg-9 px-3 px-md-4 fs-5">
-    <div class="mb-3 ">
-      <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
-    </div>
-    <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="" />
-    </div>
-    <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-    </div>
-    <div class="">
-      <button type="submit" class="btn btn-info mb-3 fs-4">Enviar</button>
-    </div>
-  </form>  
+
+  </div>
+  
 
 </section>
 
