--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- carrusel -->
-  <div id="carouselExample" class="carousel slide">
+  <header id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../d05/assets/img/carousel1.jpg" class="d-block w-100 foto1" alt="...">
@@ -70,7 +70,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </header>
 
   <!-- section quienes somos -->
   <header id="quienes_somos" class="d-none d-md-flex justify-content-center align-items-center text-white pt-3 ">
